<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:baselineAligned="false"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="end"
              android:background="#ff424242">

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginStart="12dp"
                  android:orientation="vertical"
                  android:layout_gravity="center_vertical">

        <TextView android:id="@+id/notification_player_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:singleLine="true"
                  android:textColor="@color/colourWhite"
                  android:textSize="12sp"
                  android:text="@string/placeholder_title"/>

        <TextView android:id="@+id/notification_player_artist"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:singleLine="true"
                  android:textColor="@color/colourGrey2"
                  android:textSize="12sp"
                  android:text="@string/placeholder_artist"/>

        <TextView android:id="@+id/notification_player_album"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:singleLine="true"
                  android:textColor="@color/colourGrey2"
                  android:textSize="12sp"
                  android:text="@string/placeholder_album"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <ImageButton
            android:id="@+id/notification_player_prev"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_player_previous_selected"
            android:contentDescription="@string/cd_prev"/>

        <ImageButton
            android:id="@+id/notification_player_playpause"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@null"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_player_play_minimal"
            android:contentDescription="@string/cd_play"/>

        <ImageButton
            android:id="@+id/notification_player_next"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_player_next_selected"
            android:contentDescription="@string/cd_next"/>

    </LinearLayout>

</LinearLayout>