<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="128dp"
              android:background="#ff424242">

    <ImageView
        android:id="@+id/notification_player_artwork"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@color/colourGrey2"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_album_art"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/notification_player_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colourWhite"
            android:textSize="16sp"
            android:text="@string/placeholder_title"/>
        <TextView
            android:id="@+id/notification_player_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colourGrey2"
            android:textSize="12sp"
            android:text="@string/placeholder_artist"/>
        <TextView
            android:id="@+id/notification_player_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colourGrey2"
            android:textSize="12sp"
            android:text="@string/placeholder_album"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="21dp"
            android:background="@color/colourGrey1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:id="@+id/notification_player_prev"
                android:layout_width="0dp"
                android:layout_weight="0.33"
                android:layout_height="fill_parent"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_player_previous_selected"
                android:contentDescription="@string/cd_prev"/>

            <ImageButton
                android:id="@+id/notification_player_playpause"
                android:layout_width="0dp"
                android:layout_weight="0.33"
                android:layout_height="fill_parent"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_player_play_minimal"
                android:contentDescription="@string/cd_play"/>

            <ImageButton
                android:id="@+id/notification_player_next"
                android:layout_width="0dp"
                android:layout_weight="0.33"
                android:layout_height="fill_parent"
                android:background="?android:attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_player_next_selected"
                android:contentDescription="@string/cd_next"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>