<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:background="?android:attr/selectableItemBackground"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <Space android:layout_width="11dp"
           android:layout_height="55dp"
           android:layout_marginTop="6dp"
           android:layout_marginBottom="6dp" />

    <ImageView android:id="@+id/element_song_artwork"
               android:layout_width="55dp"
               android:layout_height="55dp"
               android:layout_marginTop="6dp"
               android:layout_marginEnd="11dp"
               android:layout_marginBottom="6dp"
               android:background="@color/colourGrey2"
               android:contentDescription="@string/cd_album_art"/>

    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center_vertical">

        <TextView android:id="@+id/element_song_title"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:ellipsize="end"
                  android:singleLine="true"
                  android:text="@string/placeholder_title"
                  android:textSize="18sp"/>

        <TextView android:id="@+id/element_song_artist"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:ellipsize="end"
                  android:singleLine="true"
                  android:text="@string/placeholder_artist"
                  android:textSize="12sp"/>

        <TextView android:id="@+id/element_song_album"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:ellipsize="end"
                  android:singleLine="true"
                  android:text="@string/placeholder_album"
                  android:textSize="12sp"/>

    </LinearLayout>

    <TextView android:id="@+id/element_song_duration"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:text="@string/null_timecode"
              android:layout_marginStart="11dp"
              android:layout_marginEnd="5dp"/>

    <ImageButton android:id="@+id/element_song_menu"
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/navigation_more"
                 android:contentDescription="@string/cd_track_options"/>

</LinearLayout>
