<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:background="?android:attr/selectableItemBackground"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView android:id="@+id/element_album_artwork"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:layout_marginTop="6dp"
               android:layout_marginLeft="11dp"
               android:layout_marginRight="11dp"
               android:layout_marginBottom="6dp"
               android:background="@color/colourGrey2"
               android:contentDescription="@string/cd_album_art"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center_vertical">

        <TextView android:id="@+id/element_album_title"
                  android:text="@string/placeholder_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"/>

        <TextView android:id="@+id/element_album_artist"
                  android:text="@string/placeholder_artist"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="12sp"/>

    </LinearLayout>

</LinearLayout>
