<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".ui.PlayerActivity"
                tools:showIn="@layout/activity_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView android:id="@+id/player_large_albumart_placeholder"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:paddingTop="90dp"
               android:paddingStart="2dp"
               android:paddingEnd="10dp"
               android:scaleType="fitStart"
               android:background="@color/colourGrey2"
               android:src="@drawable/ic_placeholder"
               android:contentDescription="@string/cd_album_art"/>

    <ImageView android:id="@+id/player_large_albumart"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:scaleType="centerCrop"
               android:contentDescription="@string/cd_album_art"
               android:visibility="gone"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colourFrosty">

            <include layout="@layout/element_song"
                     android:layout_height="wrap_content"
                     android:layout_width="fill_parent"
                     android:layout_marginTop="2.5pt"
                     android:layout_marginBottom="2.5pt"/>

        </RelativeLayout>

        <Space android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:layout_gravity="top"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="16dp"
                          android:background="@color/colourFrosty">

                <LinearLayout android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">

                    <TextView android:id="@+id/player_track_position"
                              android:layout_height="wrap_content"
                              android:layout_width="wrap_content"
                              android:layout_marginStart="5dp"
                              android:layout_marginTop="5dp"
                              android:text="@string/null_timecode">

                    </TextView>

                    <Space android:layout_height="wrap_content"
                           android:layout_width="0dp"
                           android:layout_weight="1" />

                    <TextView android:id="@+id/player_track_duration"
                              android:layout_height="wrap_content"
                              android:layout_width="wrap_content"
                              android:layout_marginEnd="5dp"
                              android:layout_marginTop="5dp"
                              android:text="@string/null_timecode">

                    </TextView>

                </LinearLayout>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_centerHorizontal="true"
                              android:layout_marginTop="10dp"
                              android:layout_marginBottom="5dp"
                              android:orientation="horizontal">

                    <ImageButton android:layout_width="60dp"
                                 android:layout_height="65dp"
                                 android:layout_marginStart="10dp"
                                 android:background="@null"
                                 android:src="@drawable/ic_player_repeat"
                                 android:scaleType="fitStart"
                                 android:contentDescription="@string/cd_repeat"
                                 android:onClick="onRepeatButtonClick"/>

                    <ImageButton android:layout_width="60dp"
                                 android:layout_height="65dp"
                                 android:layout_marginStart="10dp"
                                 android:background="@null"
                                 android:src="@drawable/player_previous_button"
                                 android:scaleType="fitStart"
                                 android:contentDescription="@string/cd_prev"
                                 android:onClick="onPrevButtonClick"/>

                    <ImageButton android:id="@+id/player_play_button"
                                 android:layout_width="60dp"
                                 android:layout_height="65dp"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginEnd="10dp"
                                 android:background="@null"
                                 android:src="@drawable/ic_player_pause"
                                 android:scaleType="fitStart"
                                 android:contentDescription="@string/cd_play"
                                 android:onClick="onPlayButtonClick"/>

                    <ImageButton android:layout_width="60dp"
                                 android:layout_height="65dp"
                                 android:layout_marginEnd="10dp"
                                 android:background="@null"
                                 android:src="@drawable/player_next_button"
                                 android:scaleType="fitStart"
                                 android:contentDescription="@string/cd_next"
                                 android:onClick="onNextButtonClick"/>

                    <ImageButton android:layout_width="60dp"
                                 android:layout_height="65dp"
                                 android:layout_marginEnd="10dp"
                                 android:background="@null"
                                 android:src="@drawable/ic_player_shuffle"
                                 android:scaleType="fitStart"
                                 android:contentDescription="@string/cd_shuffle"
                                 android:onClick="onShuffleButtonClick"/>

                </LinearLayout>

            </RelativeLayout>

            <SeekBar android:id="@+id/player_seek_bar"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="-8pt"
                     android:layout_marginEnd="-8pt"
                     android:progress="0"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
